--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6773,29 +6773,33 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 125, "Edit", WS_BORDER|WS_TABSTOP, 103, 37, 73, 11
-  CONTROL "", 126, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 178, 37, 177, 12
+  CONTROL "", 126, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 178, 37, 177, 11
   CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 103, 50, 73, 11
-  CONTROL "", 301, "Edit", WS_BORDER, 178, 50, 177, 12
+  CONTROL "", 301, "Edit", WS_BORDER, 178, 50, 177, 11
   CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 103, 63, 73, 11
-  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 178, 63, 177, 12
+  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 178, 63, 177, 11
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 103, 75, 73, 11
-  CONTROL "", 180, "Edit", WS_BORDER, 178, 75, 177, 12
+  CONTROL "", 180, "Edit", WS_BORDER, 178, 75, 177, 11
   CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 87, 252, 11
   CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 99, 74, 11
   CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 179, 100, 41, 10
-  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 221, 99, 82, 11
+  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 230, 99, 73, 11
   CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 305, 99, 50, 11
   CONTROL "", 235, "Edit", WS_BORDER|WS_TABSTOP, 417, 37, 70, 11
   CONTROL "", 236, "Edit", WS_BORDER|WS_TABSTOP, 489, 37, 168, 11
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 417, 50, 240, 11
   CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 417, 63, 85, 11
   CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 75, 85, 11
+  CONTROL "General", 410, "Button", BS_AUTORADIOBUTTON, 50, 141, 60, 10
   CONTROL "", 162, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 87, 85, 11
+  CONTROL "Unión Europea", 411, "Button", BS_AUTORADIOBUTTON, 50, 153, 60, 10
   CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 63, 110, 11
+  CONTROL "Exento", 412, "Button", BS_AUTORADIOBUTTON, 50, 165, 60, 10
   CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 75, 110, 11
+  CONTROL "Exportación", 413, "Button", BS_AUTORADIOBUTTON, 50, 177, 60, 10
   CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 88, 110, 11
-  CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 103, 140, 552, 29
-  CONTROL "", 250, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 103, 171, 552, 29
+  CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 230, 140, 428, 29
+  CONTROL "", 250, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 230, 171, 428, 29
   CONTROL "&Modificar", 501, "Button", WS_TABSTOP, 48, 218, 50, 14
   CONTROL "&Eliminar", 502, "Button", WS_TABSTOP, 48, 233, 50, 14
   CONTROL "&Previsualizar", 506, "Button", WS_TABSTOP, 48, 248, 50, 14
@@ -6808,9 +6812,9 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 480, "Static", SS_RIGHT|WS_GROUP, 585, 342, 70, 10
   CONTROL "Cobros", 112, "Button", BS_GROUPBOX, 44, 207, 465, 81
   CONTROL "Entrega", -1, "Static", WS_GROUP, 370, 90, 46, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 129, 619, 76
-  CONTROL "Comentarios", -1, "Static", WS_GROUP, 50, 172, 44, 8
-  CONTROL "Observaciones", -1, "Static", WS_GROUP, 50, 141, 52, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 174, 129, 489, 76
+  CONTROL "Comentarios", -1, "Static", WS_GROUP, 178, 172, 44, 8
+  CONTROL "Observaciones", -1, "Static", WS_GROUP, 178, 141, 52, 8
   CONTROL "Condiciones", -1, "Static", WS_GROUP, 50, 90, 46, 8
   CONTROL "Retirado por", -1, "Static", WS_GROUP, 370, 53, 46, 8
   CONTROL "Matrícula", -1, "Static", WS_GROUP, 370, 66, 46, 8
@@ -6843,6 +6847,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Usuario", -1, "Static", WS_GROUP, 50, 40, 44, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Factura cliente", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 44, 129, 127, 76
 }
 
 FACPRV_1 DIALOG DISCARDABLE 50, 35, 670, 378
@@ -7134,28 +7139,32 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 101, 39, 408, 110
-  CONTROL "", 110, "Edit", WS_BORDER, 101, 52, 408, 12
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 101, 76, 115, 12
-  CONTROL "", 301, "Edit", WS_BORDER, 218, 76, 291, 12
-  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 101, 88, 115, 12
-  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 218, 88, 291, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 101, 100, 115, 12
-  CONTROL "", 180, "Edit", WS_BORDER, 218, 100, 291, 12
-  CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 515, 40, 42, 10
-  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 559, 39, 97, 12
-  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 559, 52, 60, 12
-  CONTROL "", 235, "Edit", WS_BORDER|WS_TABSTOP, 101, 130, 88, 12
-  CONTROL "", 236, "Edit", WS_BORDER|WS_TABSTOP, 192, 130, 270, 12
-  CONTROL "", 161, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 101, 142, 88, 12
-  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 238, 142, 224, 12
-  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 154, 88, 12
-  CONTROL "", 162, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 166, 88, 12
-  CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 504, 130, 152, 12
-  CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 504, 142, 152, 12
-  CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 504, 154, 152, 12
-  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 101, 192, 359, 12
+  CONTROL "", 110, "Edit", WS_BORDER, 101, 52, 408, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 101, 76, 115, 11
+  CONTROL "", 301, "Edit", WS_BORDER, 218, 76, 291, 11
+  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 101, 88, 115, 11
+  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 218, 88, 291, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 101, 100, 115, 11
+  CONTROL "", 180, "Edit", WS_BORDER, 218, 100, 291, 11
+  CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 530, 40, 42, 10
+  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 577, 39, 79, 11
+  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 577, 52, 41, 11
+  CONTROL "General", 410, "Button", BS_AUTORADIOBUTTON, 50, 133, 60, 10
+  CONTROL "Unión Europea", 411, "Button", BS_AUTORADIOBUTTON, 50, 145, 60, 10
+  CONTROL "Exento", 412, "Button", BS_AUTORADIOBUTTON, 50, 157, 60, 10
+  CONTROL "Exportación", 413, "Button", BS_AUTORADIOBUTTON, 50, 169, 60, 10
+  CONTROL "", 235, "Edit", WS_BORDER|WS_TABSTOP, 218, 130, 88, 11
+  CONTROL "", 236, "Edit", WS_BORDER|WS_TABSTOP, 308, 130, 201, 11
+  CONTROL "", 161, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 218, 142, 88, 11
+  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 356, 142, 153, 11
+  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 154, 88, 11
+  CONTROL "", 162, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 218, 166, 88, 11
+  CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 576, 130, 80, 11
+  CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 576, 142, 80, 11
+  CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 576, 154, 80, 11
+  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 101, 192, 359, 11
   CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 101, 205, 555, 57
-  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 504, 192, 152, 12
+  CONTROL "", 181, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 504, 192, 152, 11
   CONTROL "&Modificar", 501, "Button", WS_TABSTOP, 48, 283, 50, 14
   CONTROL "&Eliminar", 502, "Button", WS_TABSTOP, 48, 298, 50, 14
   CONTROL "&Previsualizar", 506, "Button", WS_TABSTOP, 48, 313, 50, 14
@@ -7170,30 +7179,31 @@ FONT 8, "MS Sans Serif"
   CONTROL "Total factura", -1, "Static", WS_GROUP, 528, 284, 50, 8
   CONTROL "0", 455, "Static", SS_RIGHT|WS_GROUP, 591, 284, 65, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 521, 273, 142, 59
-  CONTROL "Entrega", -1, "Static", WS_GROUP, 51, 169, 42, 8
+  CONTROL "Entrega", -1, "Static", WS_GROUP, 169, 169, 42, 8
   CONTROL "Condiciones", -1, "Static", WS_GROUP, 51, 195, 44, 8
-  CONTROL "Retirado por", -1, "Static", WS_GROUP, 192, 145, 44, 8
-  CONTROL "Matrícula", -1, "Static", WS_GROUP, 51, 145, 42, 8
+  CONTROL "Retirado por", -1, "Static", WS_GROUP, 308, 145, 44, 8
+  CONTROL "Matrícula", -1, "Static", WS_GROUP, 169, 145, 42, 8
   CONTROL "Proyecto", -1, "Static", WS_GROUP, 51, 103, 43, 8
   CONTROL "Su pedido", -1, "Static", WS_GROUP, 465, 195, 37, 8
-  CONTROL "Transporte", -1, "Static", WS_GROUP, 51, 133, 42, 8
+  CONTROL "Transporte", -1, "Static", WS_GROUP, 169, 133, 42, 8
   CONTROL "Caja", -1, "Static", WS_GROUP, 51, 91, 43, 8
-  CONTROL "Bultos", -1, "Static", WS_GROUP, 51, 157, 42, 8
+  CONTROL "Bultos", -1, "Static", WS_GROUP, 169, 157, 42, 8
   CONTROL "Delegación", -1, "Static", WS_GROUP, 51, 79, 43, 8
-  CONTROL "TARA", -1, "Static", WS_GROUP, 465, 133, 37, 8
-  CONTROL "Peso ", -1, "Static", WS_GROUP, 465, 145, 37, 8
-  CONTROL "Diferencia ", -1, "Static", WS_GROUP, 465, 157, 37, 8
+  CONTROL "TARA", -1, "Static", WS_GROUP, 530, 133, 37, 8
+  CONTROL "Peso ", -1, "Static", WS_GROUP, 530, 145, 37, 8
+  CONTROL "Diferencia ", -1, "Static", WS_GROUP, 530, 157, 37, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 521, 335, 142, 35
   CONTROL "Motivo", -1, "Static", WS_GROUP, 51, 43, 43, 8
   CONTROL "Causa", -1, "Static", WS_GROUP, 51, 55, 43, 8
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 30, 620, 89
   CONTROL "Comentarios", -1, "Static", WS_GROUP, 51, 206, 44, 8
-  CONTROL "Transporte", -1, "Button", BS_GROUPBOX, 44, 122, 620, 59
+  CONTROL "Transporte", -1, "Button", BS_GROUPBOX, 163, 122, 501, 59
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Factura rectificativa", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "", 125, "Edit", WS_BORDER|WS_TABSTOP, 101, 64, 115, 12
+  CONTROL "", 125, "Edit", WS_BORDER|WS_TABSTOP, 101, 64, 115, 11
   CONTROL "Usuario", -1, "Static", WS_GROUP, 51, 67, 30, 8
-  CONTROL "", 126, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 218, 64, 291, 12
+  CONTROL "", 126, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 218, 64, 291, 11
+  CONTROL "Régimen de impuestos", 4001, "Button", BS_GROUPBOX, 44, 121, 115, 60
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
@@ -16965,27 +16975,27 @@ RECIBOS_1 DIALOG DISCARDABLE 82, 27, 333, 256
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 38, 70, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 51, 70, 12
-  CONTROL "", 335, "Edit", ES_RIGHT|WS_BORDER, 265, 51, 59, 12
-  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 108, 76, 70, 12
-  CONTROL "", 190, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 108, 89, 70, 12
-  CONTROL "", 260, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 108, 106, 70, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 265, 106, 37, 12
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 38, 70, 11
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 51, 70, 11
+  CONTROL "", 335, "Edit", ES_RIGHT|WS_BORDER, 265, 51, 59, 11
+  CONTROL "", 180, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 108, 76, 70, 11
+  CONTROL "", 190, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 108, 89, 70, 11
+  CONTROL "", 260, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 108, 106, 70, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 265, 106, 37, 11
   CONTROL "", 171, "TBitmap", 0x00800000, 305, 106, 19, 11
   CONTROL "Cobrado", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 134, 40, 10
-  CONTROL "", 230, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 133, 70, 12
-  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 108, 145, 70, 12
-  CONTROL "", 281, "Edit", WS_BORDER|WS_TABSTOP, 180, 145, 144, 12
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 108, 173, 70, 12
-  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 180, 173, 144, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 108, 186, 70, 12
-  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 180, 186, 144, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 108, 199, 70, 12
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 180, 199, 144, 12
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 108, 212, 216, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 108, 225, 216, 12
-  CONTROL "", 155, "Edit", WS_BORDER|WS_TABSTOP, 108, 238, 216, 12
+  CONTROL "", 230, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 133, 70, 11
+  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 108, 145, 70, 11
+  CONTROL "", 281, "Edit", WS_BORDER|WS_TABSTOP, 180, 145, 144, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 108, 173, 70, 11
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 180, 173, 144, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 108, 186, 70, 11
+  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 180, 186, 144, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 108, 199, 70, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 180, 199, 144, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 108, 212, 216, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 108, 225, 216, 11
+  CONTROL "", 155, "Edit", WS_BORDER|WS_TABSTOP, 108, 238, 216, 11
   CONTROL "Concepto ", -1, "Static", WS_GROUP, 50, 216, 38, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 50, 79, 40, 8
   CONTROL "Vencimiento", -1, "Static", WS_GROUP, 50, 54, 44, 8
@@ -17007,7 +17017,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Sesión", -1, "Static", WS_GROUP, 233, 54, 27, 8
   CONTROL "No incluir en arqueo", 200, "Button", BS_AUTOCHECKBOX, 233, 39, 77, 10
   CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 44, 162, 285, 92
-  CONTROL "Código caja", 4001, "Static", WS_GROUP, 50, 148, 43, 8
+  CONTROL "Código caja", -1, "Static", WS_GROUP, 50, 148, 43, 8
 }
 
 RECIBOS_2 DIALOG DISCARDABLE 82, 27, 333, 235
