--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1916,7 +1916,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 104, "Button", NOT WS_VISIBLE|WS_TABSTOP, 516, 244, 42, 36
   CONTROL "", 103, "Button", NOT WS_VISIBLE|WS_TABSTOP, 601, 208, 42, 36
   CONTROL "", 102, "Button", NOT WS_VISIBLE|WS_TABSTOP, 559, 208, 42, 36
-  CONTROL "", 600, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 516, 289, 170, 28
+  CONTROL "", 600, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 545, 289, 141, 28
   CONTROL "", 101, "Button", NOT WS_VISIBLE|WS_TABSTOP, 516, 208, 42, 36
   CONTROL "", 120, "Button", WS_TABSTOP, 1, 319, 42, 36
   CONTROL "", 121, "Button", WS_TABSTOP, 44, 319, 42, 36
@@ -1939,6 +1939,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 304, "Button", WS_TABSTOP, 430, 319, 42, 36
   CONTROL "", 305, "Button", WS_TABSTOP, 473, 319, 42, 36
   CONTROL "", 505, "Button", WS_TABSTOP, 301, 319, 42, 36
+  CONTROL "", 601, "Button", WS_TABSTOP, 516, 289, 29, 28
 }
 
 TPV_LISTA_TICKET_1280X752 DIALOG DISCARDABLE 4, 47, 548, 255
