--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -7244,7 +7244,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Aceptar e imprimir [F6]", 500, "Button", WS_TABSTOP, 481, 353, 79, 14
 }
 
-FAMILIA DIALOG DISCARDABLE 98, -11, 355, 360
+FAMILIA DIALOG DISCARDABLE 98, -11, 353, 360
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Familias de artículos"
 FONT 8, "MS Sans Serif"
@@ -7267,49 +7267,16 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 131, "Edit", WS_BORDER, 114, 60, 161, 12
   CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 58, 72, 54, 12
   CONTROL "", 141, "Edit", WS_BORDER, 114, 72, 161, 12
-  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 58, 84, 54, 12
-  CONTROL "", 281, "Edit", WS_BORDER, 114, 84, 161, 12
-  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 58, 97, 54, 12
-  CONTROL "", 421, "Edit", WS_BORDER, 114, 97, 161, 12
-  CONTROL "Incluir en TPV táctil", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 123, 79, 10
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 58, 135, 217, 12
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 58, 147, 217, 12
-  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 58, 159, 40, 12
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 58, 171, 54, 12
-  CONTROL "", 411, "Edit", WS_BORDER, 114, 171, 161, 12
-  CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 58, 208, 54, 12
-  CONTROL "", 431, "Edit", WS_BORDER, 114, 208, 161, 12
-  CONTROL "Artículos no acumulables", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 185, 95, 10
-  CONTROL "Mostrar ventana comentarios", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 196, 108, 10
-  CONTROL "Publicar en internet", 115, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 236, 74, 10
-  CONTROL "Añadir familia a la descripción", 116, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 248, 108, 10
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 235, 246, 40, 12
-  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 58, 260, 217, 12
-  CONTROL "Permitir precios sin valoración", 315, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 288, 108, 10
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 58, 299, 54, 12
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 299, 54, 12
-  CONTROL "", 600, "TBitmap", 0x00800000, 283, 5, 60, 62
+  CONTROL "", 200, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 8, 101, 267, 207
+  CONTROL "", 600, "TBitmap", 0x00800000, 282, 5, 60, 62
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 27, 30, 8
   CONTROL "Propiedad 1", -1, "Static", WS_GROUP, 8, 63, 43, 8
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 15, 27, 8
   CONTROL "Propiedad 2", -1, "Static", WS_GROUP, 8, 75, 43, 8
-  CONTROL "Rapels %", -1, "Static", WS_GROUP, 172, 302, 35, 8
   CONTROL "Grupo familias", -1, "Static", WS_GROUP, 8, 51, 49, 8
-  CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 1, 1, 279, 37
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 1, 40, 279, 72
-  CONTROL "Color botón", -1, "Static", WS_GROUP, 8, 138, 41, 8
-  CONTROL "Imagen", -1, "Static", WS_GROUP, 8, 150, 29, 8
-  CONTROL "Frase pub.", -1, "Static", WS_GROUP, 8, 87, 39, 8
-  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 1, 277, 279, 38
-  CONTROL "Descuento %", -1, "Static", WS_GROUP, 8, 303, 47, 8
-  CONTROL "Propiedades táctil", -1, "Button", BS_GROUPBOX, 1, 114, 279, 109
-  CONTROL "Familia comb.", -1, "Static", WS_GROUP, 8, 173, 48, 8
-  CONTROL "Posición", -1, "Static", WS_GROUP, 8, 162, 32, 8
-  CONTROL "Orden", -1, "Static", WS_GROUP, 8, 100, 45, 8
-  CONTROL "Orden Internet", -1, "Static", WS_GROUP, 172, 249, 47, 8
-  CONTROL "Prestashop", -1, "Button", BS_GROUPBOX, 1, 224, 279, 51
-  CONTROL "Comentario", -1, "Static", WS_GROUP, 8, 210, 48, 8
-  CONTROL "Descripción", -1, "Static", WS_GROUP, 8, 263, 43, 8
+  CONTROL "Identificación", -1, "Button", BS_GROUPBOX, 1, 1, 279, 38
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 1, 40, 279, 49
+  CONTROL "Relaciones", -1, "Button", BS_GROUPBOX, 1, 91, 279, 223
 }
 
 FAMILIA_02 DIALOG DISCARDABLE 98, -11, 346, 318
@@ -19751,7 +19718,34 @@ FAMILIA_04 DIALOG DISCARDABLE 98, -11, 346, 318
 STYLE WS_CHILD|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Familia padre", -1, "Button", BS_GROUPBOX, 1, 2, 339, 313
-  CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 9, 14, 323, 295
+  CONTROL "Incluir en TPV táctil", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 13, 79, 10
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 59, 25, 217, 12
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 59, 38, 217, 12
+  CONTROL "", 330, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 51, 40, 12
+  CONTROL "", 430, "Edit", WS_BORDER|WS_TABSTOP, 59, 65, 54, 12
+  CONTROL "", 431, "Edit", WS_BORDER, 115, 65, 161, 12
+  CONTROL "", 420, "Edit", WS_BORDER|WS_TABSTOP, 59, 79, 54, 12
+  CONTROL "", 421, "Edit", WS_BORDER, 115, 79, 161, 12
+  CONTROL "Artículos no acumulables", 160, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 96, 95, 10
+  CONTROL "Mostrar ventana comentarios", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 107, 108, 10
+  CONTROL "Publicar en internet", 115, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 135, 74, 10
+  CONTROL "Añadir familia a la descripción", 116, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 147, 108, 10
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 236, 145, 40, 12
+  CONTROL "", 340, "Edit", WS_BORDER|WS_TABSTOP, 59, 159, 217, 12
+  CONTROL "Permitir precios sin valoración", 315, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 9, 187, 108, 10
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 59, 198, 54, 12
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 222, 198, 54, 12
+  CONTROL "Rapels %", -1, "Static", WS_GROUP, 173, 201, 35, 8
+  CONTROL "Color botón", -1, "Static", WS_GROUP, 9, 28, 41, 8
+  CONTROL "Imagen", -1, "Static", WS_GROUP, 9, 41, 29, 8
+  CONTROL "Precios", -1, "Button", BS_GROUPBOX, 2, 176, 279, 38
+  CONTROL "Descuento %", -1, "Static", WS_GROUP, 9, 202, 47, 8
+  CONTROL "Propiedades táctil", -1, "Button", BS_GROUPBOX, 2, 2, 279, 119
+  CONTROL "Posición", -1, "Static", WS_GROUP, 9, 54, 32, 8
+  CONTROL "Orden", -1, "Static", WS_GROUP, 9, 82, 45, 8
+  CONTROL "Orden Internet", -1, "Static", WS_GROUP, 173, 148, 47, 8
+  CONTROL "Prestashop", -1, "Button", BS_GROUPBOX, 2, 123, 279, 51
+  CONTROL "Comentario", -1, "Static", WS_GROUP, 9, 67, 48, 8
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 9, 162, 43, 8
 }
 
