--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -642,7 +642,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Fecha su alb.", -1, "Static", WS_GROUP, 44, 98, 49, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Albaranes de proveedores", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Alm.Org.", 342, "Static", WS_GROUP, 439, 60, 31, 8
+  CONTROL "Origen", 342, "Static", WS_GROUP, 439, 60, 31, 8
 }
 
 ALBPRV_2 DIALOG DISCARDABLE 4, 18, 670, 375
