--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19551,6 +19551,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 104, 178, 272, 12
   CONTROL "", 450, "Edit", WS_BORDER|WS_TABSTOP, 104, 190, 85, 12
   CONTROL "", 451, "Edit", WS_BORDER, 191, 190, 185, 12
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 104, 202, 85, 12
+  CONTROL "", 461, "Edit", WS_BORDER|WS_TABSTOP, 191, 202, 185, 12
   CONTROL "No autorizado para cambio de precios", 240, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 39, 133, 10
   CONTROL "No mostrar rentabilidad ", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 52, 133, 10
   CONTROL "No mostrar precios de costo", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 65, 133, 10
@@ -19563,15 +19565,15 @@ FONT 8, "MS Sans Serif"
   CONTROL "Filtrar operaciones por usuario", 350, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 156, 133, 10
   CONTROL "Realizar documentos automáticos", 360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 168, 133, 10
   CONTROL "No abrir cajón portamonedas", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 180, 107, 10
-  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 104, 220, 85, 12
-  CONTROL "", 321, "Edit", WS_BORDER|WS_TABSTOP, 191, 220, 185, 12
-  CONTROL "", 170, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER, 51, 235, 325, 138
-  CONTROL "Sin acceso", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 221, 70, 10
-  CONTROL "Añadir, duplicar", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 234, 70, 10
-  CONTROL "Modificar", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 247, 70, 10
-  CONTROL "Zoom", 210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 260, 70, 10
-  CONTROL "Eliminar", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 273, 70, 10
-  CONTROL "Imprimir", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 286, 70, 10
+  CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 104, 234, 85, 12
+  CONTROL "", 321, "Edit", WS_BORDER|WS_TABSTOP, 191, 234, 185, 12
+  CONTROL "", 170, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER, 51, 249, 325, 124
+  CONTROL "Sin acceso", 180, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 235, 70, 10
+  CONTROL "Añadir, duplicar", 190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 248, 70, 10
+  CONTROL "Modificar", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 261, 70, 10
+  CONTROL "Zoom", 210, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 274, 70, 10
+  CONTROL "Eliminar", 220, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 287, 70, 10
+  CONTROL "Imprimir", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 300, 70, 10
   CONTROL "&Aceptar [F5]", 560, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 396, 381, 50, 14
   CONTROL "&Cancelar", 561, "Button", WS_TABSTOP, 451, 381, 50, 14
   CONTROL "&Ayuda", 569, "Button", WS_TABSTOP, 506, 381, 50, 14
@@ -19580,22 +19582,23 @@ FONT 8, "MS Sans Serif"
   CONTROL "Nombre", -1, "Static", WS_GROUP, 51, 55, 46, 8
   CONTROL "Clave acceso", 121, "Static", WS_GROUP, 51, 81, 46, 8
   CONTROL "Tipo", -1, "Static", WS_GROUP, 51, 68, 46, 8
-  CONTROL "Mapa de accesos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 209, 511, 168
+  CONTROL "Mapa de accesos", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 223, 511, 154
   CONTROL "Almacén", -1, "Static", WS_GROUP, 51, 121, 41, 8
   CONTROL "Caja", -1, "Static", WS_GROUP, 51, 133, 41, 8
   CONTROL "Imágen", -1, "Static", WS_GROUP, 51, 181, 41, 8
   CONTROL "Usuario", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 44, 30, 338, 75
   CONTROL "Delegación", -1, "Static", WS_GROUP, 51, 157, 41, 8
   CONTROL "Repetir clave", 123, "Static", WS_GROUP, 51, 93, 46, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 390, 30, 165, 176
-  CONTROL "Valores por defecto", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 44, 107, 338, 99
-  CONTROL "Grupo", 322, "Static", WS_GROUP, 51, 223, 33, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 390, 30, 165, 190
+  CONTROL "Valores por defecto", -1, "Button", BS_GROUPBOX|WS_TABSTOP|0x00000020, 44, 107, 338, 113
+  CONTROL "Grupo", 322, "Static", WS_GROUP, 51, 237, 33, 8
   CONTROL "", 341, "Edit", WS_BORDER, 191, 166, 185, 12
   CONTROL "Operario", -1, "Static", WS_GROUP, 51, 169, 41, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Usuarios", -1, "Static", WS_GROUP, 44, 3, 120, 8
   CONTROL "Empresa", -1, "Static", WS_GROUP, 51, 145, 41, 8
   CONTROL "Tipo incidencia", -1, "Static", WS_GROUP, 51, 193, 52, 8
+  CONTROL "Sala de venta", 4003, "Static", WS_GROUP, 52, 205, 50, 8
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
