--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -2446,3 +2446,16 @@ FONT 12, "Segoe UI"
   CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 140, 138, 30, 22
 }
 
+TPVMENUACOMP DIALOG DISCARDABLE 87, -178, 173, 161
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Acompañamiento de artículo"
+FONT 12, "Segoe UI"
+{
+  CONTROL "", 100, "TXBrowse", 0x00200000, 6, 9, 160, 124
+  CONTROL "", 110, "Button", WS_TABSTOP, 6, 134, 30, 22
+  CONTROL "", 111, "Button", WS_TABSTOP, 37, 134, 30, 22
+  CONTROL "", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 106, 134, 30, 22
+  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 137, 134, 30, 22
+  CONTROL "Acompañamiento", -1, "Button", BS_GROUPBOX, 2, 0, 168, 158
+}
+
