--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1500,17 +1500,19 @@ ART_TACTIL DIALOG DISCARDABLE 36, 16, 496, 306
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 29, 448, 130
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 29, 448, 145
   CONTROL "Incluir en táctil", 230, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 36, 59, 10
-  CONTROL "", 225, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 139, 47, 40, 12
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 139, 60, 348, 12
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 139, 73, 348, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 139, 86, 348, 12
-  CONTROL "", 470, "Edit", WS_BORDER|WS_TABSTOP, 139, 99, 40, 12
-  CONTROL "", 471, "Edit", WS_BORDER|WS_TABSTOP, 180, 99, 307, 12
+  CONTROL "", 225, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 139, 47, 40, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 139, 60, 348, 11
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 139, 73, 348, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 139, 86, 348, 11
+  CONTROL "", 470, "Edit", WS_BORDER|WS_TABSTOP, 139, 99, 40, 11
+  CONTROL "", 471, "Edit", WS_BORDER|WS_TABSTOP, 180, 99, 307, 11
   CONTROL "", 450, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 140, 112, 85, 84
   CONTROL "", 460, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 140, 127, 85, 84
   CONTROL "Artículo por peso", 480, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 143, 89, 10
+  CONTROL "", 490, "Edit", WS_BORDER|WS_TABSTOP, 139, 153, 40, 11
+  CONTROL "", 491, "Edit", WS_BORDER|WS_TABSTOP, 180, 153, 307, 11
   CONTROL "Texto táctil", -1, "Static", WS_GROUP, 49, 62, 47, 8
   CONTROL "Imagen táctil", -1, "Static", WS_GROUP, 49, 89, 45, 8
   CONTROL "Posición", -1, "Static", WS_GROUP, 49, 50, 32, 8
@@ -1520,6 +1522,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Propiedades para el terminal punto de venta táctil", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
   CONTROL "Color botón", -1, "Static", WS_GROUP, 49, 76, 41, 8
   CONTROL "Orden", -1, "Static", WS_GROUP, 49, 102, 25, 8
+  CONTROL "Menú acompañamiento", 4003, "Static", WS_GROUP, 49, 156, 84, 8
 }
 
 ART_WEB DIALOG DISCARDABLE 36, 16, 496, 286
@@ -19256,20 +19259,21 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Menús"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 62, 4, 40, 12
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 62, 16, 274, 12
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 62, 29, 100, 12
-  CONTROL "Obsoleto", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 44, 48, 10
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 68, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 62, 68, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 118, 68, 50, 14
-  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 84, 329, 164
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 62, 3, 40, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 62, 16, 274, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 62, 29, 100, 11
+  CONTROL "Obsoleto", 130, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 62, 55, 43, 10
+  CONTROL "Menú acompañamiento", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 62, 44, 92, 10
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 6, 78, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 62, 78, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 118, 78, 50, 14
+  CONTROL "", 400, "TXBrowse", WS_TABSTOP|0x00300000, 6, 94, 329, 154
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 235, 257, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 290, 257, 50, 14
   CONTROL "Nombre", -1, "Static", WS_GROUP, 4, 19, 42, 8
-  CONTROL "Código", -1, "Static", WS_GROUP, 4, 7, 37, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 4, 6, 37, 8
   CONTROL "Precio", -1, "Static", WS_GROUP, 4, 32, 54, 8
-  CONTROL "Ordenes de comanda", -1, "Button", BS_GROUPBOX, 2, 57, 339, 196
+  CONTROL "Ordenes de comanda", -1, "Button", BS_GROUPBOX, 2, 67, 339, 186
 }
 
 TRABAJADOR DIALOG DISCARDABLE 102, 33, 571, 330
