--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -13575,78 +13575,73 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 55, 42, 65, 12
   CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 55, 55, 65, 12
   CONTROL "", 120, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 69, 40, 12
-  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 82, 65, 12
+  CONTROL "", 610, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 83, 65, 12
   CONTROL "", 130, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 96, 65, 12
   CONTROL "", 140, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 109, 65, 12
   CONTROL "", 520, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 122, 65, 12
   CONTROL "", 530, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 135, 65, 12
   CONTROL "", 540, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 148, 65, 12
+  CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 31, 161, 23, 12
   CONTROL "", 150, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 161, 65, 12
   CONTROL "", 350, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 174, 65, 12
   CONTROL "", 151, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 187, 65, 12
   CONTROL "", 260, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 55, 200, 65, 12
+  CONTROL "", 125, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 69, 56, 12
+  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 83, 56, 12
+  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 300, 82, 56, 12
+  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 96, 56, 12
+  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 300, 96, 56, 12
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 174, 109, 30, 12
-  CONTROL "", 180, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 69, 56, 12
-  CONTROL "", 190, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 300, 69, 56, 12
-  CONTROL "", 200, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 174, 82, 56, 12
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 285, 135, 50, 12
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 336, 135, 19, 12
-  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 285, 148, 50, 12
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 336, 148, 19, 12
-  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 174, 96, 30, 12
-  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 205, 96, 151, 12
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 174, 122, 30, 12
-  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 174, 134, 69, 12
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 174, 161, 30, 12
-  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 205, 161, 94, 12
-  CONTROL "", 610, "Edit", WS_BORDER|WS_TABSTOP, 174, 173, 30, 12
-  CONTROL "", 611, "Edit", WS_BORDER, 205, 173, 151, 12
-  CONTROL "", 620, "Edit", WS_BORDER|WS_TABSTOP, 174, 186, 30, 12
-  CONTROL "", 621, "Edit", WS_BORDER, 205, 186, 151, 12
-  CONTROL "", 630, "Edit", WS_BORDER|WS_TABSTOP, 174, 199, 30, 12
-  CONTROL "", 631, "Edit", WS_BORDER, 205, 199, 151, 12
-  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 173, 219, 71, 12
-  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 300, 161, 56, 12
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 205, 109, 151, 12
+  CONTROL "", 205, "Edit", WS_BORDER|WS_TABSTOP, 174, 122, 30, 12
+  CONTROL "", 206, "Edit", WS_BORDER|WS_TABSTOP, 205, 122, 151, 12
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 174, 135, 30, 12
+  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 205, 135, 151, 12
+  CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 174, 148, 69, 12
+  CONTROL "", 620, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 174, 161, 69, 12
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 285, 148, 50, 12
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 336, 148, 19, 12
+  CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 285, 161, 50, 12
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 336, 161, 19, 12
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 174, 200, 30, 12
+  CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 205, 200, 94, 12
+  CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 300, 200, 56, 12
   CONTROL "", 220, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 55, 219, 65, 12
-  CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 205, 122, 151, 12
+  CONTROL "", 320, "Edit", ES_RIGHT|WS_BORDER, 173, 219, 71, 12
   CONTROL "", 272, "Edit", WS_BORDER, 122, 42, 234, 12
   CONTROL "", 282, "Edit", WS_BORDER, 122, 55, 234, 12
   CONTROL "Precio ", -1, "Static", WS_GROUP, 4, 164, 25, 8
   CONTROL "Cajas ", 131, "Static", WS_GROUP, 4, 99, 48, 8
   CONTROL "Importe", -1, "Static", WS_GROUP, 4, 222, 34, 8
-  CONTROL "Descuento ", -1, "Static", WS_GROUP, 122, 72, 42, 8
+  CONTROL "Descuento ", -1, "Static", WS_GROUP, 122, 87, 42, 8
   CONTROL "Unidades", 141, "Static", WS_GROUP, 4, 112, 43, 8
   CONTROL "Artículo", -1, "Static", WS_GROUP, 4, 5, 36, 8
-  CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 72, 36, 8
-  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 245, 72, 55, 8
-  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 122, 85, 47, 8
+  CONTROL "Impuestos", -1, "Static", WS_GROUP, 4, 73, 36, 8
+  CONTROL "Dto. promoción ", -1, "Static", WS_GROUP, 245, 86, 55, 8
+  CONTROL "Com. agente ", -1, "Static", WS_GROUP, 122, 100, 47, 8
   CONTROL "Punto verde", 152, "Static", WS_GROUP, 4, 190, 47, 8
   CONTROL "Propiedad 2", 281, "Static", WS_GROUP, 4, 57, 51, 8
   CONTROL "Propiedad 1", 271, "Static", WS_GROUP, 4, 44, 51, 8
   CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 4, 203, 37, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 245, 138, 19, 8
-  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 122, 125, 37, 8
-  CONTROL "Alm. / Stock", -1, "Static", WS_GROUP, 122, 164, 45, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 245, 152, 19, 8
+  CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 122, 139, 37, 8
+  CONTROL "Alm. / Stock", -1, "Static", WS_GROUP, 122, 204, 45, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 5, 215, 354, 1
-  CONTROL "Imp. esp.", 126, "Static", WS_GROUP, 4, 85, 34, 8
+  CONTROL "Imp. especiales", 126, "Static", WS_GROUP, 122, 73, 52, 8
   CONTROL "Costo", 321, "Static", WS_GROUP, 122, 222, 23, 8
   CONTROL "Nº lote", 113, "Static", WS_GROUP, 4, 18, 50, 8
-  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 122, 99, 45, 8
   CONTROL "Portes", 351, "Static", WS_GROUP, 4, 177, 42, 8
-  CONTROL "Volumen", -1, "Static", WS_GROUP, 245, 150, 31, 8
+  CONTROL "Volumen", -1, "Static", WS_GROUP, 245, 165, 31, 8
   CONTROL "", 521, "Static", WS_GROUP, 4, 125, 42, 8
   CONTROL "", 541, "Static", WS_GROUP, 4, 151, 47, 8
   CONTROL "", 531, "Static", WS_GROUP, 4, 138, 42, 8
-  CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 31, 161, 23, 12
-  CONTROL "", 612, "Static", WS_GROUP, 122, 176, 48, 8
-  CONTROL "", 622, "Static", WS_GROUP, 122, 189, 48, 8
-  CONTROL "", 632, "Static", WS_GROUP, 122, 202, 48, 8
   CONTROL "Und. medición", -1, "Static", WS_GROUP, 122, 112, 47, 8
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 205, 109, 151, 12
-  CONTROL "", 201, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 300, 82, 56, 12
-  CONTROL "Comisión", -1, "Static", WS_GROUP, 245, 85, 33, 8
+  CONTROL "Comisión", -1, "Static", WS_GROUP, 245, 100, 33, 8
   CONTROL "Caducidad", 341, "Static", WS_GROUP, 4, 32, 41, 8
-  CONTROL "Factor", -1, "Static", WS_GROUP, 123, 137, 35, 8
+  CONTROL "Factor", -1, "Static", WS_GROUP, 123, 152, 35, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 165, 35, 8
+  CONTROL "Bultos", 611, "Static", WS_GROUP, 4, 87, 48, 8
+  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 122, 126, 46, 8
 }
 
 LPEDCLI_2 DIALOG DISCARDABLE 42, 28, 745, 228
