--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5944,11 +5944,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 410, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 94, 89, 232, 12
   CONTROL "", 420, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 89, 42, 12
   CONTROL "", 430, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 373, 89, 50, 84
-  CONTROL "Tarifa 5", 501, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 102, 37, 11
+  CONTROL "Tarifa 5", 501, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 102, 37, 11
   CONTROL "", 510, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 94, 102, 232, 12
   CONTROL "", 520, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 102, 42, 12
   CONTROL "", 530, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 373, 102, 50, 84
-  CONTROL "Tarifa 6", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 115, 37, 11
+  CONTROL "Tarifa 6", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 115, 37, 11
   CONTROL "", 610, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 94, 115, 232, 12
   CONTROL "", 620, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 114, 42, 12
   CONTROL "", 630, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 373, 114, 50, 84
@@ -5956,45 +5956,48 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 810, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 162, 140, 42, 12
   CONTROL "", 740, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 127, 42, 12
   CONTROL "", 750, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 329, 140, 42, 12
-  CONTROL "Habilitar cajas", 250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 170, 57, 10
-  CONTROL "Cajas en cálculos", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 60, 183, 69, 10
-  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 244, 169, 179, 12
-  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 244, 182, 179, 12
-  CONTROL "Mostrar ventana de stocks en artículos", 770, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 210, 137, 10
-  CONTROL "No mostrar stock en almacenes a cero", 193, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 223, 135, 10
-  CONTROL "No permitir ventas números de series sin stock", 196, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 236, 159, 10
-  CONTROL "No calcular stock actual en compras y ventas", 194, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 244, 210, 157, 10
-  CONTROL "No calcular stock por lotes", 197, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 244, 223, 99, 10
-  CONTROL "No calcular stock por números de serie", 198, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 244, 236, 138, 10
-  CONTROL "", 700, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 264, 38, 12
-  CONTROL "", 710, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 277, 38, 12
-  CONTROL "", 720, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 296, 264, 38, 12
-  CONTROL "", 730, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 296, 277, 38, 12
-  CONTROL "Primero código del articulo", 760, "Button", BS_AUTORADIOBUTTON, 50, 305, 96, 10
-  CONTROL "Primero código del proveedor", 761, "Button", BS_AUTORADIOBUTTON, 50, 318, 105, 10
-  CONTROL "Preguntar al usuario", 762, "Button", BS_AUTORADIOBUTTON, 50, 331, 76, 10
-  CONTROL "Mascaras para cantidades", -1, "Button", BS_GROUPBOX, 44, 253, 191, 39
-  CONTROL "Enteros", -1, "Static", WS_GROUP, 50, 267, 30, 8
-  CONTROL "Decimales", -1, "Static", WS_GROUP, 50, 280, 38, 8
-  CONTROL "Mascaras para escandallos", -1, "Button", BS_GROUPBOX, 237, 253, 193, 39
+  CONTROL "Habilitar cajas", 250, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 181, 57, 10
+  CONTROL "Cajas en cálculos", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 60, 192, 69, 10
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 244, 180, 179, 12
+  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 244, 193, 179, 12
+  CONTROL "Mostrar ventana de stocks en artículos", 770, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 222, 137, 10
+  CONTROL "No mostrar stock en almacenes a cero", 193, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 235, 135, 10
+  CONTROL "No permitir ventas números de series sin stock", 196, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 50, 248, 159, 10
+  CONTROL "No calcular stock actual en compras y ventas", 194, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 244, 222, 157, 10
+  CONTROL "No calcular stock por lotes", 197, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 244, 235, 99, 10
+  CONTROL "No calcular stock por números de serie", 198, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 244, 248, 138, 10
+  CONTROL "", 700, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 263, 278, 38, 12
+  CONTROL "", 710, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 263, 291, 38, 12
+  CONTROL "", 720, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 386, 278, 38, 12
+  CONTROL "", 730, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 386, 291, 38, 12
+  CONTROL "Primero código del articulo", 760, "Button", BS_AUTORADIOBUTTON, 50, 278, 96, 10
+  CONTROL "Primero código del proveedor", 761, "Button", BS_AUTORADIOBUTTON, 50, 291, 105, 10
+  CONTROL "Preguntar al usuario", 762, "Button", BS_AUTORADIOBUTTON, 50, 304, 76, 10
+  CONTROL "Mascaras para cantidades", -1, "Button", BS_GROUPBOX, 197, 267, 113, 39
+  CONTROL "Enteros", -1, "Static", WS_GROUP, 203, 281, 30, 8
+  CONTROL "Decimales", -1, "Static", WS_GROUP, 203, 294, 38, 8
+  CONTROL "Mascaras para escandallos", -1, "Button", BS_GROUPBOX, 313, 267, 117, 39
   CONTROL "Sobre", -1, "Static", WS_GROUP, 373, 40, 24, 8
   CONTROL "Precios", -1, "Button", BS_GROUPBOX, 44, 29, 386, 127
   CONTROL "Nombre", -1, "Static", WS_GROUP, 94, 40, 30, 8
   CONTROL "% Beneficio", -1, "Static", WS_GROUP, 329, 40, 42, 8
-  CONTROL "Enteros", -1, "Static", WS_GROUP, 244, 267, 30, 8
-  CONTROL "Decimales", -1, "Static", WS_GROUP, 244, 280, 38, 8
+  CONTROL "Enteros", -1, "Static", WS_GROUP, 319, 281, 30, 8
+  CONTROL "Decimales", -1, "Static", WS_GROUP, 319, 294, 38, 8
   CONTROL "Visible", -1, "Static", WS_GROUP, 50, 40, 30, 8
   CONTROL "Precio del producto para táctil", -1, "Static", WS_GROUP, 217, 130, 97, 8
   CONTROL "Precio del combinado para táctil", -1, "Static", WS_GROUP, 217, 143, 104, 8
   CONTROL "Precio por defecto", -1, "Static", WS_GROUP, 50, 130, 97, 8
   CONTROL "Precio Web por defecto", -1, "Static", WS_GROUP, 50, 143, 97, 8
-  CONTROL "Stocks", -1, "Button", BS_GROUPBOX, 44, 199, 386, 52
+  CONTROL "Stocks", -1, "Button", BS_GROUPBOX, 44, 211, 386, 52
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Valores por defecto para artículos", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 384, 8
-  CONTROL "Texto para cajas", -1, "Static", WS_GROUP, 162, 172, 58, 8
-  CONTROL "Texto para unidades", -1, "Static", WS_GROUP, 162, 185, 70, 8
-  CONTROL "Utilización de cajas", -1, "Button", BS_GROUPBOX, 44, 158, 386, 39
-  CONTROL "Busquedas en caso de conflicto en compras", -1, "Button", BS_GROUPBOX, 44, 294, 386, 51
+  CONTROL "Texto para cajas", -1, "Static", WS_GROUP, 162, 183, 58, 8
+  CONTROL "Texto para unidades", -1, "Static", WS_GROUP, 162, 194, 70, 8
+  CONTROL "Utilización de cajas", -1, "Button", BS_GROUPBOX, 44, 158, 386, 52
+  CONTROL "Busquedas en caso de conflicto en compras", -1, "Button", BS_GROUPBOX, 44, 267, 149, 51
+  CONTROL "Habilitar bultos", 450, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 49, 169, 61, 10
+  CONTROL "Texto para bultos", -1, "Static", WS_GROUP, 162, 171, 70, 8
+  CONTROL "", 460, "Edit", WS_BORDER|WS_TABSTOP, 244, 167, 179, 12
 }
 
 EMPRESA_9 DIALOG DISCARDABLE 31, 12, 417, 318
@@ -13598,11 +13601,11 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 174, 135, 30, 12
   CONTROL "", 291, "Edit", WS_BORDER|WS_TABSTOP, 205, 135, 151, 12
   CONTROL "", 295, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 174, 148, 69, 12
-  CONTROL "", 620, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 174, 161, 69, 12
-  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 285, 148, 50, 12
-  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 336, 148, 19, 12
+  CONTROL "", 620, "Edit", WS_BORDER|WS_TABSTOP, 174, 174, 182, 12
+  CONTROL "", 160, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 174, 161, 48, 12
+  CONTROL "", 175, "Edit", WS_BORDER|WS_TABSTOP, 224, 161, 19, 12
   CONTROL "", 400, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 285, 161, 50, 12
-  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 336, 161, 19, 12
+  CONTROL "", 410, "Edit", WS_BORDER|WS_TABSTOP, 337, 161, 19, 12
   CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 174, 200, 30, 12
   CONTROL "", 301, "Edit", WS_BORDER|WS_TABSTOP, 205, 200, 94, 12
   CONTROL "", 310, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 300, 200, 56, 12
@@ -13623,7 +13626,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Propiedad 2", 281, "Static", WS_GROUP, 4, 57, 51, 8
   CONTROL "Propiedad 1", 271, "Static", WS_GROUP, 4, 44, 51, 8
   CONTROL "Dto. lineal", 261, "Static", WS_GROUP, 4, 203, 37, 8
-  CONTROL "Peso", -1, "Static", WS_GROUP, 245, 152, 19, 8
+  CONTROL "Peso", -1, "Static", WS_GROUP, 123, 165, 19, 8
   CONTROL "Tipo mov.", 292, "Static", WS_GROUP, 122, 139, 37, 8
   CONTROL "Alm. / Stock", -1, "Static", WS_GROUP, 122, 204, 45, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 5, 215, 354, 1
@@ -13639,7 +13642,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Comisión", -1, "Static", WS_GROUP, 245, 100, 33, 8
   CONTROL "Caducidad", 341, "Static", WS_GROUP, 4, 32, 41, 8
   CONTROL "Factor", -1, "Static", WS_GROUP, 123, 152, 35, 8
-  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 165, 35, 8
+  CONTROL "Formato", -1, "Static", WS_GROUP, 123, 177, 35, 8
   CONTROL "Bultos", 611, "Static", WS_GROUP, 4, 87, 48, 8
   CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 122, 126, 46, 8
 }
